--- a/index.html
+++ b/index.html
@@ -1,7 +1,51 @@
 <html>
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<p>This is the homepage of Linghai Liu. </p>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #deecf9;">
+        <a class="navbar-brand" href="#">LINGHAI LIU</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></sp  an>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#introduction">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#experiences">EXPERIENCES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">PROJECTS</a>
+            </li>
+          </ul>
+          <!-- <span class="navbar-text">
+            Navbar text with an inline element
+          </span> -->
+        </div>
+    </nav>
+    <section id="introduction" class="content">
+      <p>
+        This is the homepage of Linghai Liu. 
+      </p>
+    </section>
+    <section id="experiences" class="content">
+      <p>
+        This is the section for experience. 
+      </p>
+    </section>
+    <section id="projects" class="content">
+      <p>
+        This is the section for projects. 
+      </p>
+    </section>
+    <div class="footer">
+      The footer of the page. 
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
