--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<!DOCTYPE HTML>
 <html>
 <head>
+    <title>Linghai Liu</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -14,11 +21,14 @@
             <li class="nav-item active">
               <a class="nav-link" href="#introduction">HOME</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="#experiences">EXPERIENCES</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="#projects">PROJECTS</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="docs/Resume_Linghai_Liu.pdf" target="_blank">RÉSUMÉ</a>
             </li>
           </ul>
           <!-- <span class="navbar-text">
