--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <li class="nav-item active">
               <a class="nav-link" href="#introduction">HOME</a>
             </li>
-            <li class="nav-item active">
+            <!-- <li class="nav-item active">
               <a class="nav-link" href="#experiences">EXPERIENCES</a>
-            </li>
+            </li> -->
             <li class="nav-item active">
               <a class="nav-link" href="#projects">PROJECTS</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="docs/Resume_Linghai_Liu.pdf" target="_blank">RÉSUMÉ</a>
+              <a class="nav-link" href="docs/Linghai_Liu_Resume.pdf" target="_blank">RESUME</a>
             </li>
           </ul>
           <!-- <span class="navbar-text">
@@ -37,22 +37,91 @@
         </div>
     </nav>
     <section id="introduction" class="content">
-      <p>
-        This is the homepage of Linghai Liu. 
-      </p>
+        <h4 class="titles">About</h4>
+        <div class="h-intro">
+            <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
+            <div>
+                <p>
+                    My name is Linghai Liu. I am now a sophomore at Brown University concentrating in Applied Mathematics - Computer Science. 
+                    Exploring the unknown in the world with mathematical tools always fancies me, as well as learning new topics and employing them. 
+                </p> 
+                <p>
+                    Aside from school and work, I enjoy reading books and watching anime. Some of my favorites are <i>Snow Country (雪国)</i> by Yasunari Kawabata (川端&nbsp;康成) and 
+                    <i>The End of the Affair</i> by Graham Greene. The first demonstrates the innocence of a human heart, as it melts into a pure, white, untainted world, 
+                    while the latter blatently narrates <i>a record of hate far more than of love</i>. 
+                </p>
+                <p>Contact:
+                    <ul>
+                        <li>linghai_liu@brown.edu</li>
+                        <li>+1 (401)-3474178</li>
+                    </ul>
+                </p>
+            </div>
+        </div>
+        
     </section>
-    <section id="experiences" class="content">
+    <!-- <section id="experiences" class="content">
       <p>
         This is the section for experience. 
       </p>
-    </section>
+    </section> -->
     <section id="projects" class="content">
-      <p>
-        This is the section for projects. 
-      </p>
+        <h4 class="titles">
+            Projects
+        </h4>
+        <ul>2020
+            <li>
+                <div>
+                    (Course Project) <i>A Re-Implementation of Visual Question Answering</i>, 
+                    w/ Y. Yang, J. Yu, J. Yi. Prof. D. Ritchie, CSCI1470: Deep Learning. 
+                </div>
+                <a class="btn btn-primary" role="button" href="https://devpost.com/software/jkjk" target="_blank">Devpost</a>
+                <a class="btn btn-primary" role="button" href="https://github.com/yangyuegly/cs147_vqa" target="_blank">github</a>
+            </li>
+            <li>
+                <div>
+                    (Course Project) <i>Usage of English Articles among L2 Learners - A corpus study of graded essays from TOEFL</i>, 
+                    w/ H. Zheng, D. Springer. Prof. U. Cohen Priva, CLPS1360: Introduction to Corpus Linguistics. 
+                </div>
+                <a class="btn btn-primary" role="button" href="docs/Corpus_final_project_without_QA.pdf" target="_blank">pdf</a>
+                <a class="btn btn-primary" role="button" href="docs/Corpus_final_project_with_QA.pdf" target="_blank">pdf(w/ Q&A)</a>
+                <a class="btn btn-primary" role="button" href="https://github.com/hollyyuqizheng/english-l2-learner-corpus" target="_blank">github</a>
+            </li>
+            <li>
+                <div>
+                    (Course Project) <i>Heat Diffusion on Higher Dimensions</i>, 
+                    w/ K. Fu, S. Song, J. Yi. Prof. B. Sandstede, APMA0360: Applied Partial Differential Equations I
+                </div>
+                <a class="btn btn-primary" role="button" href="docs/Heat_Diffusion_on_higher_dimensions.pdf" target="_blank">pdf</a>
+            </li>
+            <li>
+                <div>
+                    Brown University Mathematics Project (BUMP) <i>Randomizing</i>, 
+                    w/ G. Daccache, Z. Zhou. Advisor: G. Cocomello. 
+                </div>
+                <a class="btn btn-primary" role="button" href="docs/BUMP_final_report_Randomizing.pdf" target="_blank">pdf</a>
+                <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/BUMP-code" target="_blank">github</a>
+            </li>
+            <li>
+                <div>
+                    (Course Project) <i>The Phonological System of Bai</i>. 
+                    Prof. U. Cohen Priva, CLPS1310: Phonology. 
+                </div>
+                <a class="btn btn-primary" role="button" href="docs/Language_of_Bai_Linghai_Liu.pdf" target="_blank">pdf</a>
+            </li>
+        </ul>
+        <ul>2019
+            <li>
+                <div>
+                    (Course Project) <i>Phonotactic Variations in English Spoken by Cape Verdean Americans in The Ratty</i>, 
+                    w/ N. Kato, B. Massey, A. Yang. Prof. U. Cohen Priva, CLPS0300: Introduction to Linguistics. 
+                </div>
+                <a class="btn btn-primary" role="button" href="docs/CLPS 300 Final Essay.pdf" target="_blank">pdf</a>
+            </li>
+        </ul>
     </section>
     <div class="footer">
-      The footer of the page. 
+      &copy; Linghai Liu, 2020
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
