upload document BMCM

--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
         <h4 class="titles">
             Projects
         </h4>
+        <ul>2021
+            <li>
+                <div>
+                    Brown Mathematical Contest in Modeling (BMCM), <i>Random Assignment of Judges - Model and Measurement</i>, 
+                    w/ K. Fu, J. Zhang. 
+                </div>
+                <a class="btn btn-primary" role="button" href="docs/BMCM_FLZ_final.pdf" target="_blank">pdf</a>
+            </li>
+        </ul>
         <ul>2020
             <li>
                 <div>
@@ -96,7 +105,7 @@
             </li>
             <li>
                 <div>
-                    Brown University Mathematics Project (BUMP) <i>Randomizing</i>, 
+                    Brown University Mathematics Project (BUMP), <i>Randomizing</i>, 
                     w/ G. Daccache, Z. Zhou. Advisor: G. Cocomello. 
                 </div>
                 <a class="btn btn-primary" role="button" href="docs/BUMP_final_report_Randomizing.pdf" target="_blank">pdf</a>
