--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#projects">PROJECTS</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="docs/Linghai_Liu_Resume.pdf" target="_blank">RESUME</a>
+              <a class="nav-link" href="docs/CV Brown - Linghai Liu.pdf" target="_blank">CV</a>
             </li>
           </ul>
           <!-- <span class="navbar-text">
@@ -42,7 +42,7 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    My name is Linghai Liu. I am now a sophomore at Brown University concentrating in Applied Mathematics - Computer Science. 
+                    My name is Linghai Liu. I am now a junior at Brown University concentrating in Applied Mathematics - Computer Science. 
                     Exploring the unknown in the world with mathematical tools always fancies me, as well as learning new topics and employing them. 
                 </p> 
                 <p>
@@ -130,7 +130,7 @@
         </ul>
     </section>
     <div class="footer">
-      &copy; Linghai Liu, 2020
+      &copy; Linghai Liu, 2022
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
