--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#projects">PROJECTS</a>
             </li>
+			<!-- <li class="nav-item active">
+				<a class="nav-link" href="#coursework">Coursework</a>
+			</li> -->
             <li class="nav-item active">
               <a class="nav-link" href="docs/CV Brown - Linghai Liu.pdf" target="_blank">CV</a>
             </li>
@@ -42,13 +45,12 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    My name is Linghai Liu. I am now a junior at Brown University concentrating in Applied Mathematics - Computer Science. 
+                    My name is Linghai Liu. I am now a junior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
+					by Professor <a href="https://www.dam.brown.edu/people/geman/" target="_blank">Stuart Geman</a>. 
                     Exploring the unknown in the world with mathematical tools always fancies me, as well as learning new topics and employing them. 
                 </p> 
                 <p>
-                    Aside from school and work, I enjoy reading books and watching anime. Some of my favorites are <i>Snow Country (雪国)</i> by Yasunari Kawabata (川端&nbsp;康成) and 
-                    <i>The End of the Affair</i> by Graham Greene. The first demonstrates the innocence of a human heart, as it melts into a pure, white, untainted world, 
-                    while the latter blatently narrates <i>a record of hate far more than of love</i>. 
+                    Aside from school and work, I read books and watch anime. 
                 </p>
                 <p>Contact:
                     <ul>
@@ -56,6 +58,15 @@
                         <li>+1 (401)-3474178</li>
                     </ul>
                 </p>
+				<p>Current coursework: 
+					<ul>
+						<li>Mathematical Statistics (using Casella & Berger's book)</li>
+						<li>Statistical Inference II (using Wackerley's book)</li>
+						<li>Functions of Several Variables (Manifolds)</li>
+						<li>Abstract Algebra (using <a href="https://bookstore.ams.org/amstext-55" target="_blank">Prof. Silverman's book</a>)</li>
+						<li>Pattern Theory (<a href="https://www.brown.edu/research/projects/pattern-theory/" target="_blank">explanation</a>)</li>
+					</ul>
+				</p>
             </div>
         </div>
         
@@ -70,6 +81,12 @@
             Projects
         </h4>
         <ul>2021
+			<li>
+				<div>
+					Brown University Summer Student Research, <i>Exploring Biologically Plausible Mechanisms to Induce Noise Correlations for Learning</i>, w/ Niloufar Razmi and Prof. Matt Nassar
+				</div>
+				<a class="btn btn-primary" role="button" href="docs/Linghai_Liu_Poster_v3.pdf" target="_blank">poster</a>
+			</li>
             <li>
                 <div>
                     Brown Mathematical Contest in Modeling (BMCM), <i>Random Assignment of Judges - Model and Measurement</i>, 
@@ -129,6 +146,14 @@
             </li>
         </ul>
     </section>
+	<!-- <section class="content" id="coursework">
+		<h4 class="titles">
+			Coursework
+		</h4>
+		<ul>
+			
+		</ul>
+	</section> -->
     <div class="footer">
       &copy; Linghai Liu, 2022
     </div>
