--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 </p>
 				<p>Current coursework: 
 					<ul>
-						<li>Mathematical Statistics (using Casella & Berger's book)</li>
-						<li>Statistical Inference II (using Wackerley's book)</li>
-						<li>Functions of Several Variables (Manifolds)</li>
+						<li>Mathematical Statistics (using Casella & Berger's <i>Statistical Inference</i>)</li>
+						<li>Statistical Inference II (using Wackerley's <i>Mathematical Statistics</i>)</li>
+						<li>Functions of Several Variables (Manifolds & Intro to Riemmanian Geometry)</li>
 						<li>Abstract Algebra (using <a href="https://bookstore.ams.org/amstext-55" target="_blank">Prof. Silverman's book</a>)</li>
 						<li>Pattern Theory (<a href="https://www.brown.edu/research/projects/pattern-theory/" target="_blank">explanation</a>)</li>
 					</ul>
@@ -80,6 +80,11 @@
         <h4 class="titles">
             Projects
         </h4>
+		<ul>2022
+			<li>
+				<div>(To appear) Emory REU/RET Computational Mathematics for Data Science, <i>Fast Training of Implicit Networks with Applications in Inverse Problems.</i></div>
+			</li>
+		</ul>
         <ul>2021
 			<li>
 				<div>
