--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<ul>
 						<li>Mathematical Statistics (using Casella & Berger's <i>Statistical Inference</i>)</li>
 						<li>Statistical Inference II (using Wackerley's <i>Mathematical Statistics</i>)</li>
-						<li>Functions of Several Variables (Manifolds & Intro to Riemmanian Geometry)</li>
+						<li>Functions of Several Variables II (Manifolds & Intro to Riemmanian Geometry)</li>
 						<li>Abstract Algebra (using <a href="https://bookstore.ams.org/amstext-55" target="_blank">Prof. Silverman's book</a>)</li>
 						<li>Pattern Theory (<a href="https://www.brown.edu/research/projects/pattern-theory/" target="_blank">explanation</a>)</li>
 					</ul>
@@ -83,6 +83,10 @@
 		<ul>2022
 			<li>
 				<div>(To appear) Emory REU/RET Computational Mathematics for Data Science, <i>Fast Training of Implicit Networks with Applications in Inverse Problems.</i></div>
+			</li>
+			<li>
+				<div>(Course Project) Levi-Civita Connections, w/ K. Ding, L. Hammer, M. Ji, J. Sheng. Prof. Jungang Li. </div>
+				<a class="btn btn-primary" role="button" href="docs/Connections_Notes.pdf" target="_blank">Notes(.pdf)</a>
 			</li>
 		</ul>
         <ul>2021
