--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div>
                 <p>
                     My name is Linghai Liu. I am now a junior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
-					by Professor <a href="https://www.dam.brown.edu/people/geman/" target="_blank">Stuart Geman</a>. 
+					by Professor Stuart Geman. 
                     Exploring the unknown in the world with mathematical tools always fancies me, as well as learning new topics and employing them. 
                 </p> 
                 <p>
