--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <li>+1 (401)-3474178</li>
                     </ul>
                 </p>
-				<p>Current coursework: 
+<!-- 				<p>Current coursework: 
 					<ul>
 						<li>Mathematical Statistics (using Casella & Berger's <i>Statistical Inference</i>)</li>
 						<li>Statistical Inference II (using Wackerley's <i>Mathematical Statistics</i>)</li>
@@ -66,7 +66,7 @@
 						<li>Abstract Algebra (using <a href="https://bookstore.ams.org/amstext-55" target="_blank">Prof. Silverman's book</a>)</li>
 						<li>Pattern Theory (<a href="https://www.brown.edu/research/projects/pattern-theory/" target="_blank">explanation</a>)</li>
 					</ul>
-				</p>
+				</p> -->
             </div>
         </div>
         
