--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#introduction">HOME</a>
+              <a class="nav-link" href="#introduction">About</a>
             </li>
             <!-- <li class="nav-item active">
               <a class="nav-link" href="#experiences">EXPERIENCES</a>
             </li> -->
             <li class="nav-item active">
-              <a class="nav-link" href="#projects">PROJECTS</a>
+              <a class="nav-link" href="#projects">Projects</a>
             </li>
-			<!-- <li class="nav-item active">
+			<li class="nav-item active">
 				<a class="nav-link" href="#coursework">Coursework</a>
-			</li> -->
+			</li>
             <li class="nav-item active">
               <a class="nav-link" href="docs/CV Brown - Linghai Liu.pdf" target="_blank">CV</a>
             </li>
@@ -45,7 +45,7 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    My name is Linghai Liu. I am now a junior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
+                    My name is Linghai Liu. I am now a rising senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
 					by Professor Stuart Geman. 
                     Exploring the unknown in the world with mathematical tools always fancies me, as well as learning new topics and employing them. 
                 </p> 
@@ -155,14 +155,43 @@
             </li>
         </ul>
     </section>
-	<!-- <section class="content" id="coursework">
+	<section class="content" id="TAexperience">
+		<h4 class="titles">Teaching Assistant</h4>
+		<li>APMA1740: Recent Applications in Probability and Statistics, Spring 2022</li>
+		<li>DATA1010: Probability, Statistics and Machine Learning, Fall 2021</li>
+		<li>CSCI1470: Deep Learning (Head TA), Fall 2021</li>
+		<li>APMA1650: Statistical Inference I, Spring 2021</li>
+	</section>
+	<section class="content" id="coursework">
 		<h4 class="titles">
 			Coursework
 		</h4>
-		<ul>
-			
+		<ul> Mathematics / Applied Mathematics / Computer Science
+			<li>Multivariate Calculus</li>
+			<li>Real Analysis</li>
+			<li>Topological Manifolds</li>
+			<li>Applied Ordinary & Partial Differential Equations</li>
+			<li>Linear Algebra</li>
+			<li>Computational Linear Algebra (Numerical)</li>
+			<li>Abstract Algebra</li>
+			<li>Probability</li>
+			<li>Statistical Inference I & II</li>
+			<li>Mathematical Statistics (Statistical Theory)</li>
+			<li>Recent Applications in Probability and Statistics</li>
+			<li>Pattern Theory</li>
+			<li>Linear Optimization</li>
+			<li>Machine Learning</li>
+			<li>Deep Learning</li>
+			<li>Object-Oriented Programming</li>
+			<li>Data Structures & Algorithms</li>
 		</ul>
-	</section> -->
+		<ul> Linguistics
+			<li>Human Cognition</li>
+			<li>Phonology</li>
+			<li>Introduction to Corpus Linguistics</li>
+			<li>Language Processing in Humans and Machines</li>
+		</ul>
+	</section>
     <div class="footer">
       &copy; Linghai Liu, 2022
     </div>
