--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 			<li class="nav-item active">
 				<a class="nav-link" href="#coursework">Coursework</a>
 			</li>
-            <li class="nav-item active">
+            <!-- <li class="nav-item active">
               <a class="nav-link" href="docs/CV Brown - Linghai Liu.pdf" target="_blank">CV</a>
-            </li>
+            </li> -->
           </ul>
           <!-- <span class="navbar-text">
             Navbar text with an inline element
@@ -45,12 +45,20 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
+                    Welcome!
+                </p>
+                <p>
                     My name is Linghai Liu. I am now a rising senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
-					by Professor Stuart Geman. 
+					by Professor Stuart Geman, with an emphasis in statistical theory and machine learning. </br>
+                    I am also concentrating in Pure Mathematics, advised by Professor Richard Schwartz. </br>
+                    Currently, <u>I am seeking a Ph.D. advisor for Fall 2023</u>. <br>
                     Exploring the unknown in the world with mathematical tools always fancies me, as well as learning new topics and employing them. 
                 </p> 
                 <p>
                     Aside from school and work, I read books and watch anime. 
+                </p>
+                <p>
+                    Here is my <a href="docs/CV.pdf" target="_blank"><u>CV</u>.</a>
                 </p>
                 <p>Contact:
                     <ul>
@@ -78,15 +86,18 @@
     </section> -->
     <section id="projects" class="content">
         <h4 class="titles">
-            Projects
+            Projects (last updated 07/12/2022)
         </h4>
 		<ul>2022
 			<li>
-				<div>(To appear) Emory REU/RET Computational Mathematics for Data Science, <i>Fast Training of Implicit Networks with Applications in Inverse Problems.</i></div>
+				<div>(In progress)Emory REU/RET Computational Mathematics for Data Science, <i>Fast Training of Implicit Networks with Applications in Inverse Problems.</i></div>
+                <a class="btn btn-primary" role="button" href="docs/REURET_Poster_Team_JFB.pdf" target="_blank">poster</a>
+                <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/Jacobian-free-Backprop-Implicit-Networks" target="_blank">github</a>
+                <!-- <a class="btn btn-primary" role="button" href="http://www.math.emory.edu/site/cmds-reuret/projects/2022-implicit/" target="_blank">website</a> -->
 			</li>
 			<li>
 				<div>(Course Project) Levi-Civita Connections, w/ K. Ding, L. Hammer, M. Ji, J. Sheng. Prof. Jungang Li. </div>
-				<a class="btn btn-primary" role="button" href="docs/Connections_Notes.pdf" target="_blank">Notes(.pdf)</a>
+				<a class="btn btn-primary" role="button" href="docs/Connections_Notes.pdf" target="_blank">notes</a>
 			</li>
 		</ul>
         <ul>2021
@@ -157,10 +168,13 @@
     </section>
 	<section class="content" id="TAexperience">
 		<h4 class="titles">Teaching Assistant</h4>
-		<li>APMA1740: Recent Applications in Probability and Statistics, Spring 2022</li>
-		<li>DATA1010: Probability, Statistics and Machine Learning, Fall 2021</li>
-		<li>CSCI1470: Deep Learning (Head TA), Fall 2021</li>
+        <div>Brown University</div>
+        <li>APMA1690: Computational Probability and Statistics, Fall 2022</li>
+		<li>APMA1740/2610*: Recent Applications in Probability and Statistics, Spring 2022</li>
+		<li>DATA1010*: Probability, Statistics and Machine Learning, Fall 2021</li>
+		<li>CSCI1470/2470*: Deep Learning (Head TA), Fall 2021</li>
 		<li>APMA1650: Statistical Inference I, Spring 2021</li>
+        <div>*: graduate level</div>
 	</section>
 	<section class="content" id="coursework">
 		<h4 class="titles">
