--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome!
+                    Welcome!c
                 </p>
                 <p>
                     My name is Linghai Liu. I am now a rising senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
@@ -86,13 +86,14 @@
     </section> -->
     <section id="projects" class="content">
         <h4 class="titles">
-            Projects (last updated 07/17/2022)
+            Projects (last updated 07/23/2022)
         </h4>
 		<ul>2022
 			<li>
 				<div>(In progress)Emory REU/RET Computational Mathematics for Data Science, <i>Fast Training of Implicit Networks with Applications in Inverse Problems.</i></div>
                 <a class="btn btn-primary" role="button" href="docs/REURET_Poster_Team_JFB.pdf" target="_blank">poster</a>
                 <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/Jacobian-free-Backprop-Implicit-Networks" target="_blank">github</a>
+                <a class="btn btn-primary" role="button" href="docs/Manuscript_JFB.pdf" target="_blank">write-up</a>
                 <!-- <a class="btn btn-primary" role="button" href="http://www.math.emory.edu/site/cmds-reuret/projects/2022-implicit/" target="_blank">website</a> -->
 			</li>
 			<li>
