--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     My name is Linghai Liu. I am now a rising senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
 					by Professor Stuart Geman, with an emphasis in statistical theory and machine learning. </br>
                     I am also concentrating in Pure Mathematics, advised by Professor Richard Schwartz. </br>
-                    Currently, <u>I am seeking a Ph.D. advisor for Fall 2023</u>. <br>
+                    Currently, <u>I am seeking a Ph.D. advisor in Statistics/Applied Maths for Fall 2023</u>. <br>
                     Exploring the unknown in the world with mathematical tools always fancies me, as well as learning new topics and employing them. 
                 </p> 
                 <p>
@@ -86,7 +86,7 @@
     </section> -->
     <section id="projects" class="content">
         <h4 class="titles">
-            Projects (last updated 07/23/2022)
+            Projects (last updated 08/10/2022)
         </h4>
 		<ul>2022
 			<li>
@@ -94,7 +94,7 @@
                 <a class="btn btn-primary" role="button" href="docs/REURET_Poster_Team_JFB.pdf" target="_blank">poster</a>
                 <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/Jacobian-free-Backprop-Implicit-Networks" target="_blank">github</a>
                 <a class="btn btn-primary" role="button" href="docs/Manuscript_JFB.pdf" target="_blank">write-up</a>
-                <!-- <a class="btn btn-primary" role="button" href="http://www.math.emory.edu/site/cmds-reuret/projects/2022-implicit/" target="_blank">website</a> -->
+                <a class="btn btn-primary" role="button" href="http://www.math.emory.edu/site/cmds-reuret/projects/2022-implicit/" target="_blank">website</a>
 			</li>
 			<li>
 				<div>(Course Project) Levi-Civita Connections, w/ K. Ding, L. Hammer, M. Ji, J. Sheng. Prof. Jungang Li. </div>
