--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome!c
+                    Welcome!
                 </p>
                 <p>
                     My name is Linghai Liu. I am now a rising senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
@@ -86,7 +86,7 @@
     </section> -->
     <section id="projects" class="content">
         <h4 class="titles">
-            Projects (last updated 08/10/2022)
+            Projects (last updated 08/11/2022)
         </h4>
 		<ul>2022
 			<li>
