--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                 </p>
                 <p>
                     My name is Linghai Liu. I am now a rising senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
-					by Professor Stuart Geman, with an emphasis in statistical theory and machine learning. </br>
+					by Professor Stuart Geman, with an emphasis on statistical theory and machine learning. </br>
                     I am also concentrating in Pure Mathematics, advised by Professor Richard Schwartz. </br>
-                    Currently, <u>I am seeking a Ph.D. advisor in Statistics/Applied Maths for Fall 2023</u>. <br>
-                    Exploring the unknown in the world with mathematical tools always fancies me, as well as learning new topics and employing them. 
+                    <!-- Currently, <u>I am seeking a Ph.D. advisor in Statistics/Applied Maths for Fall 2023</u>. <br> -->
+                    
                 </p> 
                 <p>
                     Aside from school and work, I read books and watch anime. 
@@ -86,7 +86,7 @@
     </section> -->
     <section id="projects" class="content">
         <h4 class="titles">
-            Projects (last updated 08/11/2022)
+            Projects (last updated 08/24/2022)
         </h4>
 		<ul>2022
 			<li>
