--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
                         <li>+1 (401)-3474178</li>
                     </ul>
                 </p>
-<!-- 				<p>Current coursework: 
+				<p>Current coursework: 
 					<ul>
-						<li>Mathematical Statistics (using Casella & Berger's <i>Statistical Inference</i>)</li>
-						<li>Statistical Inference II (using Wackerley's <i>Mathematical Statistics</i>)</li>
-						<li>Functions of Several Variables II (Manifolds & Intro to Riemmanian Geometry)</li>
-						<li>Abstract Algebra (using <a href="https://bookstore.ams.org/amstext-55" target="_blank">Prof. Silverman's book</a>)</li>
-						<li>Pattern Theory (<a href="https://www.brown.edu/research/projects/pattern-theory/" target="_blank">explanation</a>)</li>
+						<li>Theory of Probability*</li>
+                        <li>Mathematical Statistics I*</li>
+                        <li>Statistical Neuroscience*</li>
+                        <li>Honors Thesis</li>
 					</ul>
-				</p> -->
+                    <div>*: graduate level</div>
+				</p>
             </div>
         </div>
         
@@ -86,7 +86,7 @@
     </section> -->
     <section id="projects" class="content">
         <h4 class="titles">
-            Projects (last updated 10/03/2022)
+            Projects (last updated 11/01/2022)
         </h4>
 		<ul>2022
 			<li>
