--- a/index.html
+++ b/index.html
@@ -68,13 +68,22 @@
                 </p>
 				<p>Current coursework: 
 					<ul>
-						<li>Theory of Probability*</li>
+						<li>Theory of Probability I*</li>
                         <li>Mathematical Statistics I*</li>
                         <li>Statistical Neuroscience*</li>
-                        <li>Honors Thesis</li>
+                        <li>Honors Thesis Preparation</li>
 					</ul>
-                    <div>*: graduate level</div>
 				</p>
+                <p>Planning for Spring 2023:
+                    <ul>
+                        <li>Theory of Probability II*</li>
+                        <li>Graph Theory</li>
+                        <li>Computer Vision</li>
+                        <li>Advanced Topics in Deep Learning*</li>
+                        <li>Honors Thesis Preparation</li>
+                    </ul>
+                </p>
+                <div>*: graduate level</div>
             </div>
         </div>
         
@@ -86,32 +95,40 @@
     </section> -->
     <section id="projects" class="content">
         <h4 class="titles">
-            Projects (last updated 11/01/2022)
+            Projects (last updated 11/27/2022)
         </h4>
 		<ul>2022
+            <li>
+                <div>(In progress) Honors Thesis Project, <i>Exploring Topological Structures in Neural Nets</i>.</div>
+                <div><i>Advisor: </i>Prof. Stuart Geman</div>
+            </li>
 			<li>
-				<div>(In progress)Emory REU/RET Computational Mathematics for Data Science, <i>Fast Training of Implicit Networks with Applications in Inverse Problems.</i></div>
+				<div>(In progress) Emory REU/RET Computational Mathematics for Data Science, <i>Fast Training of Implicit Networks with Applications in Inverse Problems</i>, 
+                    with Lisa Zhao and Shuaicheng Tong.</div>
+                <div><i>Advisor: </i>Prof. Samy Wu Fung</div>
                 <a class="btn btn-primary" role="button" href="docs/REURET_Poster_Team_JFB.pdf" target="_blank">poster</a>
                 <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/Jacobian-free-Backprop-Implicit-Networks" target="_blank">github</a>
                 <a class="btn btn-primary" role="button" href="docs/Manuscript_JFB.pdf" target="_blank">write-up</a>
                 <a class="btn btn-primary" role="button" href="http://www.math.emory.edu/site/cmds-reuret/projects/2022-implicit/" target="_blank">website</a>
 			</li>
 			<li>
-				<div>(Course Project) Levi-Civita Connections, w/ K. Ding, L. Hammer, M. Ji, J. Sheng. Prof. Jungang Li. </div>
+				<div>(Course Project) <i>Levi-Civita Connections</i>, with Kexin Ding, Luke Hammer, Mattie Ji, and Jiayuan Sheng.</div>
+                <div><i>Instructor: </i>Prof. Jungang Li, MATH1140: Functions of Several Variables II (Differential Manifolds).</div>
 				<a class="btn btn-primary" role="button" href="docs/Connections_Notes.pdf" target="_blank">notes</a>
 			</li>
 		</ul>
         <ul>2021
 			<li>
 				<div>
-					Brown University Summer Student Research, <i>Exploring Biologically Plausible Mechanisms to Induce Noise Correlations for Learning</i>, w/ Niloufar Razmi and Prof. Matt Nassar
+					Brown University Summer Student Research, <i>Exploring Biologically Plausible Mechanisms to Induce Noise Correlations for Learning</i>, with Niloufar Razmi
 				</div>
-				<a class="btn btn-primary" role="button" href="docs/Linghai_Liu_Poster_v3.pdf" target="_blank">poster</a>
+                <div><i>Advisor: </i>Prof. Matt Nassar</div>
+				<a class="btn btn-primary" role="button" href="docs/Brown_Summer_Symposium_Linghai_Liu.pdf" target="_blank">poster</a>
 			</li>
             <li>
                 <div>
                     Brown Mathematical Contest in Modeling (BMCM), <i>Random Assignment of Judges - Model and Measurement</i>, 
-                    w/ K. Fu, J. Zhang. 
+                    with Kailiang Fu and Jingxin Zhang. 
                 </div>
                 <a class="btn btn-primary" role="button" href="docs/BMCM_FLZ_final.pdf" target="_blank">pdf</a>
             </li>
@@ -120,16 +137,18 @@
             <li>
                 <div>
                     (Course Project) <i>A Re-Implementation of Visual Question Answering</i>, 
-                    w/ Y. Yang, J. Yu, J. Yi. Prof. D. Ritchie, CSCI1470: Deep Learning. 
+                    with Yue Yang, Jacob Yu, and Jayden Yi.
                 </div>
+                <div><i>Course Instructor: </i>Prof. Daniel Ritchie, CSCI1470: Deep Learning.</div>
                 <a class="btn btn-primary" role="button" href="https://devpost.com/software/jkjk" target="_blank">Devpost</a>
                 <a class="btn btn-primary" role="button" href="https://github.com/yangyuegly/cs147_vqa" target="_blank">github</a>
             </li>
             <li>
                 <div>
                     (Course Project) <i>Usage of English Articles among L2 Learners - A corpus study of graded essays from TOEFL</i>, 
-                    w/ H. Zheng, D. Springer. Prof. U. Cohen Priva, CLPS1360: Introduction to Corpus Linguistics. 
+                    with Holly Zheng and D. Springer.
                 </div>
+                <div><i>Course Instructor: </i>Prof. U. Cohen Priva, CLPS1360: Introduction to Corpus Linguistics. </div>
                 <a class="btn btn-primary" role="button" href="docs/Corpus_final_project_without_QA.pdf" target="_blank">pdf</a>
                 <a class="btn btn-primary" role="button" href="docs/Corpus_final_project_with_QA.pdf" target="_blank">pdf(w/ Q&A)</a>
                 <a class="btn btn-primary" role="button" href="https://github.com/hollyyuqizheng/english-l2-learner-corpus" target="_blank">github</a>
@@ -137,23 +156,25 @@
             <li>
                 <div>
                     (Course Project) <i>Heat Diffusion on Higher Dimensions</i>, 
-                    w/ K. Fu, S. Song, J. Yi. Prof. B. Sandstede, APMA0360: Applied Partial Differential Equations I
+                    with Kailiang Fu, Shuyang Song, and Jayden Yi. 
                 </div>
+                <div><i>Course Instructor: </i>Prof. B. Sandstede, APMA0360: Applied Partial Differential Equations I.</div>
                 <a class="btn btn-primary" role="button" href="docs/Heat_Diffusion_on_higher_dimensions.pdf" target="_blank">pdf</a>
             </li>
             <li>
                 <div>
                     Brown University Mathematics Project (BUMP), <i>Randomizing</i>, 
-                    w/ G. Daccache, Z. Zhou. Advisor: G. Cocomello. 
+                    with George Daccache and Zhiyuan Zhou. 
                 </div>
+                <div><i>Ph.D. Student Advisor: </i> Juniper Cocomello. </div>
                 <a class="btn btn-primary" role="button" href="docs/BUMP_final_report_Randomizing.pdf" target="_blank">pdf</a>
                 <a class="btn btn-primary" role="button" href="https://github.com/lliu58b/BUMP-code" target="_blank">github</a>
             </li>
             <li>
                 <div>
                     (Course Project) <i>The Phonological System of Bai</i>. 
-                    Prof. U. Cohen Priva, CLPS1310: Phonology. 
                 </div>
+                <div><i>Course Instructor: </i>Prof. U. Cohen Priva, CLPS1310: Phonology. </div>
                 <a class="btn btn-primary" role="button" href="docs/Language_of_Bai_Linghai_Liu.pdf" target="_blank">pdf</a>
             </li>
         </ul>
@@ -161,8 +182,9 @@
             <li>
                 <div>
                     (Course Project) <i>Phonotactic Variations in English Spoken by Cape Verdean Americans in The Ratty</i>, 
-                    w/ N. Kato, B. Massey, A. Yang. Prof. U. Cohen Priva, CLPS0300: Introduction to Linguistics. 
+                    with Naotaro Kato, Bryce Massey, and Angie Yang. 
                 </div>
+                <div><i>Course Instructor: </i>Prof. U. Cohen Priva, CLPS0300: Introduction to Linguistics.</div>
                 <a class="btn btn-primary" role="button" href="docs/CLPS 300 Final Essay.pdf" target="_blank">pdf</a>
             </li>
         </ul>
@@ -170,8 +192,9 @@
 	<section class="content" id="TAexperience">
 		<h4 class="titles">Teaching Assistant</h4>
         <div>Brown University</div>
+        <li>APMA1660: Statistical Inference II, Spring 2023</li>
         <li>APMA1690: Computational Probability and Statistics, Fall 2022</li>
-		<li>APMA1740/2610*: Recent Applications in Probability and Statistics, Spring 2022</li>
+		<li>APMA1740/2610*: Recent Applications of Probability and Statistics, Spring 2022</li>
 		<li>DATA1010*: Probability, Statistics and Machine Learning, Fall 2021</li>
 		<li>CSCI1470/2470*: Deep Learning (Head TA), Fall 2021</li>
 		<li>APMA1650: Statistical Inference I, Spring 2021</li>
