--- a/index.html
+++ b/index.html
@@ -48,11 +48,9 @@
                     Welcome!
                 </p>
                 <p>
-                    My name is Linghai Liu. I am now a rising senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
+                    My name is Linghai Liu. I am now a senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
 					by Professor Stuart Geman, with an emphasis on statistical theory and machine learning. </br>
                     I am also concentrating in Pure Mathematics, advised by Professor Richard Schwartz. </br>
-                    <!-- Currently, <u>I am seeking a Ph.D. advisor in Statistics/Applied Maths for Fall 2023</u>. <br> -->
-                    
                 </p> 
                 <p>
                     Aside from school and work, I read books and watch anime. 
@@ -95,7 +93,7 @@
     </section> -->
     <section id="projects" class="content">
         <h4 class="titles">
-            Projects (last updated 11/27/2022)
+            Projects (last updated 11/29/2022)
         </h4>
 		<ul>2022
             <li>
@@ -191,9 +189,10 @@
     </section>
 	<section class="content" id="TAexperience">
 		<h4 class="titles">Teaching Assistant</h4>
-        <div>Brown University</div>
-        <li>APMA1660: Statistical Inference II, Spring 2023</li>
-        <li>APMA1690: Computational Probability and Statistics, Fall 2022</li>
+        <div>At Brown University</div>
+		<li>CSCI1952Q: Algorithmic Aspects of Machine Learning, Spring 2023</li>
+        	<li>APMA1660: Statistical Inference II, Spring 2023</li>
+        	<li>APMA1690: Computational Probability and Statistics, Fall 2022</li>
 		<li>APMA1740/2610*: Recent Applications of Probability and Statistics, Spring 2022</li>
 		<li>DATA1010*: Probability, Statistics and Machine Learning, Fall 2021</li>
 		<li>CSCI1470/2470*: Deep Learning (Head TA), Fall 2021</li>
