--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="#projects">Projects</a>
             </li>
+            <li class="nav-item active">
+				<a class="nav-link" href="#TAexperience">Teaching</a>
+			</li>
 			<li class="nav-item active">
 				<a class="nav-link" href="#coursework">Coursework</a>
 			</li>
@@ -40,18 +43,17 @@
         </div>
     </nav>
     <section id="introduction" class="content">
-        <h4 class="titles">About</h4>
+        <h4 class="titles"><br>About</h4>
         <div class="h-intro">
             <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
             <div>
                 <p>
-                    Welcome!
+                    Welcome! This page was last updated on 12/10/2022.
                 </p>
                 <p>
                     My name is Linghai Liu. I am now a rising senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
 					by Professor Stuart Geman, with an emphasis on statistical theory and machine learning. </br>
                     I am also concentrating in Pure Mathematics, advised by Professor Richard Schwartz. </br>
-                    <!-- Currently, <u>I am seeking a Ph.D. advisor in Statistics/Applied Maths for Fall 2023</u>. <br> -->
                     
                 </p> 
                 <p>
@@ -94,8 +96,8 @@
       </p>
     </section> -->
     <section id="projects" class="content">
-        <h4 class="titles">
-            Projects (last updated 11/27/2022)
+        <h4 class="titles"><br><br>
+            Projects
         </h4>
 		<ul>2022
             <li>
@@ -190,18 +192,19 @@
         </ul>
     </section>
 	<section class="content" id="TAexperience">
-		<h4 class="titles">Teaching Assistant</h4>
+		<h4 class="titles"><br><br>Teaching Assistant</h4>
         <div>Brown University</div>
-        <li>APMA1660: Statistical Inference II, Spring 2023</li>
-        <li>APMA1690: Computational Probability and Statistics, Fall 2022</li>
-		<li>APMA1740/2610*: Recent Applications of Probability and Statistics, Spring 2022</li>
-		<li>DATA1010*: Probability, Statistics and Machine Learning, Fall 2021</li>
-		<li>CSCI1470/2470*: Deep Learning (Head TA), Fall 2021</li>
-		<li>APMA1650: Statistical Inference I, Spring 2021</li>
+        <li>CSCI1952Q: Algorithmic Aspects of Machine Learning, Spring 2023. Instructor: Prof. Yu Cheng</li>
+        <li>APMA1660: Statistical Inference II, Spring 2023. Instructor: Prof. Basilis Gidas</li>
+        <li>APMA1690: Computational Probability and Statistics, Fall 2022. Instructor: Dr. Kun Meng</li>
+		<li>APMA1740/2610*: Recent Applications of Probability and Statistics, Spring 2022. Instructor: Prof. Stuart Geman</li>
+		<li>DATA1010*: Probability, Statistics and Machine Learning, Fall 2021. Instructor: Dr. Samuel Watson</li>
+		<li>CSCI1470/2470*: Deep Learning (Head TA), Fall 2021. Instructor: Prof. Chen Sun</li>
+		<li>APMA1650: Statistical Inference I, Spring 2021. Instructor: Prof. Samuel Punshon-Smith</li>
         <div>*: graduate level</div>
 	</section>
 	<section class="content" id="coursework">
-		<h4 class="titles">
+		<h4 class="titles"><br><br>
 			Coursework
 		</h4>
 		<ul> Mathematics / Applied Mathematics / Computer Science
