--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
       </p>
     </section> -->
     <section id="projects" class="content">
-        <h4 class="titles">
-            Projects (last updated 11/27/2022)
+        <h4 class="titles"><br><br>
+            Projects
         </h4>
 		<ul>2022
             <li>
@@ -192,7 +192,7 @@
         </ul>
     </section>
 	<section class="content" id="TAexperience">
-		<h4 class="titles">Teaching Assistant</h4>
+		<h4 class="titles"><br><br>Teaching Assistant</h4>
         <div>Brown University</div>
         <li>APMA1660: Statistical Inference II, Spring 2023</li>
         <li>APMA1690: Computational Probability and Statistics, Fall 2022</li>
