--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </section>
 	<section class="content" id="TAexperience">
 		<h4 class="titles"><br><br>Teaching Assistant</h4>
-        <div>Brown University</div>
+        <ul>Brown University
         <li>APMA1660: Statistical Inference II, Spring 2023</li>
         <li>APMA1690: Computational Probability and Statistics, Fall 2022</li>
 		<li>APMA1740/2610*: Recent Applications of Probability and Statistics, Spring 2022</li>
@@ -201,6 +201,7 @@
 		<li>CSCI1470/2470*: Deep Learning (Head TA), Fall 2021</li>
 		<li>APMA1650: Statistical Inference I, Spring 2021</li>
         <div>*: graduate level</div>
+        </ul>
 	</section>
 	<section class="content" id="coursework">
 		<h4 class="titles"><br><br>
