--- a/index.html
+++ b/index.html
@@ -194,12 +194,13 @@
 	<section class="content" id="TAexperience">
 		<h4 class="titles"><br><br>Teaching Assistant</h4>
         <ul>Brown University
-        <li>APMA1660: Statistical Inference II, Spring 2023</li>
-        <li>APMA1690: Computational Probability and Statistics, Fall 2022</li>
-		<li>APMA1740/2610*: Recent Applications of Probability and Statistics, Spring 2022</li>
-		<li>DATA1010*: Probability, Statistics and Machine Learning, Fall 2021</li>
-		<li>CSCI1470/2470*: Deep Learning (Head TA), Fall 2021</li>
-		<li>APMA1650: Statistical Inference I, Spring 2021</li>
+        <li>CSCI1952Q: Algorithmic Aspects of Machine Learning, Spring 2023. Instructor: Yu Cheng</li>
+        <li>APMA1660: Statistical Inference II, Spring 2023. Instructor: Basilis Gidas</li>
+        <li>APMA1690: Computational Probability and Statistics, Fall 2022. Instructor: Kun Meng</li>
+		<li>APMA1740/2610*: Recent Applications of Probability and Statistics, Spring 2022. Instructor: Stuart Geman</li>
+		<li>DATA1010*: Probability, Statistics and Machine Learning, Fall 2021. Instructor: Samuel Watson</li>
+		<li>CSCI1470/2470*: Deep Learning (Head TA), Fall 2021. Instructor: Chen Sun</li>
+		<li>APMA1650: Statistical Inference I, Spring 2021. Instructor: Samuel Punshon-Smith</li>
         <div>*: graduate level</div>
         </ul>
 	</section>
