update profile picture

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section id="introduction" class="content">
         <h4 class="titles"><br>About</h4>
         <div class="h-intro">
-            <div class="selfpic"><img id="selfpic" src="images/self-pic.jpg"></div>
+            <div class="selfpic"><img id="selfpic" src="images/self-pic.png"></div>
             <div>
                 <p>
                     Welcome! This page was last updated on 12/11/2022.
