--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
 			</li>
             <li>
                 <div>
+                    A Review of Publicly Available Geospatial Datasets and Indicators in Support of UNCCD Strategic Objective (SO) 2, with David Lopez-Carr, Kevin M. Mwenda, Kerry L. Mapes, 
+                    Susanne H. Sokolow, and Narcisa G. Pricope. 
+                </div>
+                <div><i>Advisor: </i>Prof. Kevin M. Mwenda</div>
+                <a class="btn btn-primary" role="button" href="https://static1.squarespace.com/static/5dffad039a288739c6ae0b85/t/60abf26cb4223a6ade81cecd/1621881469733/ci-3-Tools4LDN-3+%281%29.pdf" target="_blank">pdf</a>
+            </li>
+            <li>
+                <div>
                     Brown Mathematical Contest in Modeling (BMCM), <i>Random Assignment of Judges - Model and Measurement</i>, 
                     with Kailiang Fu and Jingxin Zhang. 
                 </div>
