--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
 			<li>Introduction to Corpus Linguistics</li>
 			<li>Language Processing in Humans and Machines</li>
 		</ul>
+        <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=145369&s=7' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div>
 	</section>
     <div class="footer">
       &copy; Linghai Liu, 2022
