--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
             <div class="selfpic"><img id="selfpic" src="images/self-pic.png"></div>
             <div>
                 <p>
-                    Welcome! This page was last updated on 12/28/2022.
+                    Welcome! This page was last updated on 05/02/2023.
                 </p>
                 <p>
-                    My name is Linghai Liu. I am now a senior at Brown University concentrating in Applied Mathematics - Computer Science, advised 
-					by Professor Stuart Geman, with an emphasis on statistical theory and machine learning. </br>
+                    My name is Linghai Liu. I am now a senior at Brown University concentrating in Applied Mathematics - Computer Science, advised by Professor Stuart Geman, with an interest in statistical theory and machine learning. </br>
                     I am also concentrating in Pure Mathematics, advised by Professor Richard Schwartz. </br>
-                    
+                    I will start my Ph.D. studies at Yale University Statistics and Data Science in Fall 2023.
                 </p> 
                 <p>
                     Aside from school and work, I read books and watch anime. 
@@ -64,19 +63,11 @@
                 </p>
                 <p>Contact:
                     <ul>
-                        <li>linghai_liu@brown.edu</li>
+                        <li>linghai_liu@brown.edu&nbsp;linghai.liu@yale.edu</li>
                         <li>+1 (401)-3474178</li>
                     </ul>
                 </p>
-				<p>Current coursework: 
-					<ul>
-						<li>Theory of Probability I*</li>
-                        <li>Mathematical Statistics I*</li>
-                        <li>Statistical Neuroscience*</li>
-                        <li>Honors Thesis Preparation</li>
-					</ul>
-				</p>
-                <p>Planning for Spring 2023:
+                <p>Current Coursework:
                     <ul>
                         <li>Theory of Probability II*</li>
                         <li>Graph Theory</li>
@@ -90,11 +81,6 @@
         </div>
         
     </section>
-    <!-- <section id="experiences" class="content">
-      <p>
-        This is the section for experience. 
-      </p>
-    </section> -->
     <section id="projects" class="content">
         <h4 class="titles"><br><br>
             Projects
@@ -112,8 +98,9 @@
         </ul>
 		<ul>2022
             <li>
-                <div>(In progress) Honors Thesis Project, <i>Exploring Topological Structures in Neural Nets</i>.</div>
-                <div><i>Advisor: </i>Prof. Stuart Geman</div>
+                <div>Honors Thesis Project, <i>Exploring Topological Structures in Neural Nets</i>.</div>
+                <div><i>Advisor: </i>Prof. Stuart Geman, <i>Reader: </i>Prof. Basilis Gidas</div>
+                <a class="btn btn-primary" role="button" href="docs/Linghai_Liu_Thesis_Final.pdf" target="_blank">pdf</a>
             </li>
 			<li>
 				<div>(In progress) Emory REU/RET Computational Mathematics for Data Science, <i>Fast Training of Implicit Networks with Applications in Inverse Problems</i>, 
@@ -235,9 +222,10 @@
 			<li>Linear Algebra</li>
 			<li>Computational Linear Algebra (Numerical)</li>
 			<li>Abstract Algebra</li>
-			<li>Probability</li>
+			<li>Probability (Intermediate & Measure-Theoretical*)</li>
 			<li>Statistical Inference I & II</li>
-			<li>Mathematical Statistics (Statistical Theory)</li>
+            <li>Statistical Neuroscience*</li>
+			<li>Mathematical Statistics*</li>
 			<li>Recent Applications in Probability and Statistics</li>
 			<li>Pattern Theory</li>
 			<li>Linear Optimization</li>
@@ -250,12 +238,13 @@
 			<li>Human Cognition</li>
 			<li>Phonology</li>
 			<li>Introduction to Corpus Linguistics</li>
-			<li>Language Processing in Humans and Machines</li>
+			<li>Language Processing in Humans and Machines*</li>
 		</ul>
+        <div>*: graduate level</div>
         <div align='center'><a href='https://www.free-website-hit-counter.com'><img src='https://www.free-website-hit-counter.com/c.php?d=5&id=145369&s=7' border='0' alt='Free Website Hit Counter'></a><br / ><small><a href='https://www.free-website-hit-counter.com' title="Free Website Hit Counter">Free website hit counter</a></small></div>
 	</section>
     <div class="footer">
-      &copy; Linghai Liu, 2022
+      &copy; Linghai Liu, 2023
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
